welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
                            for (compteur <- 1 to 6) {avance() ; if (estSurBiscuit() == true){vuBiscuit = true}}}
                                          ^Program:4: error: return outside method definition
	return vuBiscuit 
        ^